// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > snapshot: Disabled 1`] = `
<textarea
  class="ucl-textarea css-pcjc3t"
  data-testid="ucl-textarea"
  disabled=""
/>
`;

exports[`Textarea > snapshot: Placeholder 1`] = `
<textarea
  class="ucl-textarea css-1tb8z8w"
  data-testid="ucl-textarea"
  placeholder="test"
/>
`;

exports[`Textarea > snapshot: custom test id 1`] = `
<textarea
  class="ucl-textarea css-1tb8z8w"
  data-testid="custom-test-id"
/>
`;

exports[`Textarea > snapshot: minimal props 1`] = `
<textarea
  class="ucl-textarea css-1tb8z8w"
  data-testid="ucl-textarea"
/>
`;
